--- a/charts-template.html
+++ b/charts-template.html
@@ -55,13 +55,13 @@
 
 <div class="global">
 
-<h3>Speed (less is better)</h3>
+<h3>Execution time (random get) (less is better)</h3>
 <div class="chart" id="speed"></div>
 
 <h3>Memory (less is better)</h3>
 <div class="chart" id="memory"></div>
 
-<h3>Hash Functions (less is better)</h3>
+<h3>Different Hash Functions (less is better)</h3>
 <div class="chart" id="hash_functions"></div>
 
 <h3>Jemalloc (less is better)</h3>
